[package]
name = "bact-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.11.2"
log = "0.4.21"
reqwest = "0.11.24"
toml = "0.8.10"
